--- a/index.html
+++ b/index.html
@@ -3,13 +3,45 @@
  <title>War for flower</title>
  <style>
  canvas={
- font-family=roboto;
+ font-family=Roboto;
  font-size=42;
  }
 </head>
 <body>
  <canvas id=canvas width=1366 height=768>Loading</canvas>
  <script>
-  
+  var canvas = document.getElementById('myCanvas');
+  var context = canvas.getContext('2d');
+  function fullscreen(){
+   if(canvas.webkitRequestFullScreen) {
+    canvas.webkitRequestFullScreen();
+   }
+   else {
+    canvas.mozRequestFullScreen();
+   }
+  }            
+  canvas.width  = window.innerWidth;
+  canvas.height = window.innerHeight;
+      
+  function drawgraphics(canvas, xe, ye) {
+        var context = canvas.getContext('2d');
+        context.fillStyle = 'black';
+	context.fillRect(xe-20,ye-20,40,40);
+      }
+      function getMousePos(canvas, evt) {
+        var rect = canvas.getBoundingClientRect();
+        return {
+          x: evt.clientX - rect.left,
+          y: evt.clientY - rect.top
+        };
+      }
+      canvas.addEventListener('mousemove', function(evt) {
+        var mousePos = getMousePos(canvas, evt);
+	var xe = mousePos.x;
+	var ye = mousePos.y;
+        var lmb = evt.MouseButton;
+        writeMessage(canvas, xe, ye);
+      }, false);
+	    canvas.addEventListener('click', fullscreen);P
  </script>
 </body>
